--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@icebreakers/eslint-config-ts": "^1.0.2",
+    "eslint": "^8.28.0",
     "prettier": "latest",
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript": "^4.9.3"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
-  "packageManager": "pnpm@7.14.1"
+  "packageManager": "pnpm@7.14.1",
+  "license": "MIT",
+  "homepage": "https://github.com/sonofmagic/mrm-packages"
 }
