chore: change to https://registry.npmjs.org

--- a/packages/tasks/basic/package.json
+++ b/packages/tasks/basic/package.json
@@ -25,6 +25,6 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "http://registry.npmmirror.com/"
+    "registry": "https://registry.npmjs.org"
   }
 }
