--- a/packages/tasks/basic/package.json
+++ b/packages/tasks/basic/package.json
@@ -12,8 +12,10 @@
     "node": ">=14"
   },
   "main": "index.js",
+  "types": "index.d.ts",
   "files": [
-    "index.js"
+    "index.js",
+    "index.d.ts"
   ],
   "scripts": {},
   "keywords": [
