--- a/packages/task-icebreaker/package.json
+++ b/packages/task-icebreaker/package.json
@@ -17,7 +17,9 @@
     "index.js",
     "index.d.ts"
   ],
-  "scripts": {},
+  "scripts": {
+    "build": "tsc"
+  },
   "keywords": [
     "mrm",
     "mrm-task"
