--- a/tasks/icebreaker/package.json
+++ b/tasks/icebreaker/package.json
@@ -3,21 +3,28 @@
   "version": "0.0.1",
   "description": "Icebreaker's task for Mrm",
   "author": {
-    "name": "sonofmagic",
-    "url": "https://github.com/sonofmagic"
+    "name": "SonOfMagic",
+    "url": "https://github.com/sonofmagic",
+    "email": "1324318532@qq.com"
   },
-  "contributors": [],
+  "contributors": [
+    {
+      "name": "SonOfMagic",
+      "url": "https://github.com/sonofmagic",
+      "email": "1324318532@qq.com"
+    }
+  ],
   "license": "MIT",
   "engines": {
     "node": ">=14"
   },
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "index.js",
-    "index.d.ts"
+    "dist"
   ],
   "scripts": {
+    "dev": "tsc -w",
     "build": "tsc"
   },
   "keywords": [
@@ -25,10 +32,15 @@
     "mrm-task"
   ],
   "dependencies": {
-    "mrm-core": "^7.1.13"
+    "git-user-info": "^2.0.3",
+    "mrm-core": "^7.1.13",
+    "parse-git-config": "^3.0.0"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "devDependencies": {
+    "@types/parse-git-config": "^3.0.1"
   }
 }
