--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "devDependencies": {
     "@icebreakers/eslint-config-ts": "^1.0.2",
+    "@icebreakers/rollup": "^0.2.2",
     "eslint": "^8.28.0",
+    "mrm": "^4.1.13",
     "prettier": "latest",
+    "rollup": "^3.5.1",
+    "tslib": "^2.4.1",
     "turbo": "latest",
-    "typescript": "^4.9.3",
-    "mrm": "^4.1.13"
+    "typescript": "^4.9.3"
   },
   "engines": {
     "node": ">=14.0.0"
