--- a/tasks/icebreaker/package.json
+++ b/tasks/icebreaker/package.json
@@ -24,23 +24,23 @@
     "dist"
   ],
   "scripts": {
-    "dev": "tsc -w",
-    "build": "tsc"
+    "dev": "rollup -cw",
+    "build": "rollup -c"
   },
   "keywords": [
     "mrm",
     "mrm-task"
   ],
   "dependencies": {
-    "git-user-info": "^2.0.3",
-    "mrm-core": "^7.1.13",
-    "parse-git-config": "^3.0.0"
+    "mrm-core": "^7.1.13"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@types/parse-git-config": "^3.0.1"
+    "@types/parse-git-config": "^3.0.1",
+    "parse-git-config": "^3.0.0",
+    "git-user-info": "^2.0.3"
   }
 }
