--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@icebreakers/eslint-config-ts": "^1.0.2",
     "@icebreakers/rollup": "^0.2.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.28.0",
     "mrm": "^4.1.13",
     "prettier": "latest",
